--- a/BOM/Readme
+++ b/BOM/Readme
@@ -1,1 +1,21 @@
-ODS file is a spreadsheet file format. Any Office software can open it.
+ODS is a spreadsheet file format. Any Office software can open it.
+
+## Components:
+Component links are selected with care. But I didn't buy them directly.
+For good quality
+Most of the babyBear components donated by V-slot Poland.
+the rest collected from local stores.
+
+## Fasteners:
+Online stores often sell fasteners in odd varieties and quantities.
+If you have a local fastener shop, it would be easier to get them.
+
+There are different fastener grades. Usually you can see 8.8, 10.9, 12.9 etc.
+Higher the number means stronger and more brittle the fastener.
+I recommend 10.9 grade for this project.
+Please keep in mind; If a seller didn't specify the grade, it is most likely 8.8 or even less.
+
+
+## Tools:
+You will need those tools to build the babyBear.
+They are also common tools for 3D printing and such projects.
