Some other initial updates

--- a/BOM/Readme
+++ b/BOM/Readme
@@ -1,19 +1,21 @@
-ODS is a spreadsheet file format. Any Office software can open it.
+ODS is a spreadsheet file format. Any office software can open it.
 
 ## Components:
-Component links are selected with care. But I didn't buy them directly.
-For good quality
+Component connections are carefully selected. But I didn't buy them directly.
 Most of the babyBear components donated by V-slot Poland.
-the rest collected from local stores.
+The rest were collected from local stores.
+
+I bought average quality 16010 bearings from a local store for 4USD each and F608 bearings from aliexpress for less than 1USD each.
+I don't recommend cheapest bearings. They tend to be very bad. But best selling cheap bearings are usually good enough for such projects.
+
 
 ## Fasteners:
 Online stores often sell fasteners in odd varieties and quantities.
-If you have a local fastener shop, it would be easier to get them.
+It would be easier to get fasteners from a local shop.
 
 There are different fastener grades. Usually you can see 8.8, 10.9, 12.9 etc.
-Higher the number means stronger and more brittle the fastener.
-I recommend 10.9 grade for this project.
-Please keep in mind; If a seller didn't specify the grade, it is most likely 8.8 or even less.
+Higher the number means stronger the fastener.
+I recommend fasteners grade higher than 8.8 for this project.
 
 
 ## Tools:
