--- a/Docs/FAQ
+++ b/Docs/FAQ
@@ -50,4 +50,4 @@ If we use small bearings, all the force applied on work bed would be focused on 
 
 
 ## **Can I build and sell the babyBear?**
-Please check the project licence and get legal advice.
+Please check the project license and get legal advice.
